--- a/index.html
+++ b/index.html
@@ -269,9 +269,11 @@
       <section id="others-section">
         <div class="others-img-container">
           <img src="imgs/logo.png" alt="">
-          <img class="icon" src="imgs/facebook-icon.png" alt="">
-          <img class="icon" src="imgs/youtube-icon.png" alt="">
-          <img class="icon" src="imgs/instagram-icon.png" alt="">
+          <div class="others-icon-wrapper">
+            <img class="icon" src="imgs/facebook-icon.png" alt="">
+            <img class="icon" src="imgs/youtube-icon.png" alt="">
+            <img class="icon" src="imgs/instagram-icon.png" alt="">
+          </div>
         </div>
         <div class="others-text-container">
           Os preços, promoções, condições de pagamento, frete e produtos são válidos exclusivamente para compras realizadas via internet.
